<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/alert_dialog_background"
    android:orientation="vertical"
    android:paddingTop="@dimen/dp_16">

    <LinearLayout
        android:id="@+id/ll_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:drawableRight="@drawable/delete1"
            android:gravity="center"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/tips"
            android:textColor="@color/color_black1"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_dialog_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:padding="5dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            app:drawableEndCompat="@drawable/delete1" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:background="@color/Grey100"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/tv_dialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_toolbar"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:hint="这里是弹窗内容"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:textColor="@color/text_surface"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Grey100" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_dialog_cancle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancle"
            android:textColor="@color/textColorPrimary"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/Grey100" />

        <TextView
            android:id="@+id/tv_dialog_sure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>